--- a/style/index.css
+++ b/style/index.css
@@ -56,3 +56,27 @@ nav a{
     text-align:center;
 }
 /*end of header styles*/
+/*main section styles*/
+.mainimg{
+    width:55%;
+    margin:2% 2% 2% 1%;
+    border:1px solid black;
+    border-radius: 5px;
+}
+.about{
+    width:49%;
+    margin-top:7%;
+}
+.main{
+    display:flex;
+    justify-content: space-between;
+}
+.about button{
+    border:2px ridge black;
+    background:#DA70D6;
+    width:12%;
+    margin-bottom:2%;
+}
+.about button:hover{
+transform: scale(1.2);
+}
